@@ -1,3 +1,11 @@
+2002-05-31  olicha  <olivier.chapuis@free.fr>
+
+	* FvwmIconMan/xmanager.h:
+	Fixed font loading in the I18N_MB case
+
+	* FvwmPager/x_pager.c (initialize_pager):
+	Fixed some I18N_MB error messages. Removed strictly fixed code
+
 2002-05-27  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* FvwmTheme/FvwmTheme.c (parse_colorset):
