@@ -1,3 +1,12 @@
+2002-05-31  olicha  <olivier.chapuis@free.fr>
+
+	* NEWS:
+	* libs/GetFont.c (GetFontSetOrFixed):
+	Fixed some I18N_MB error messages. Removed strictly fixed code
+
+	* fvwm/fvwm.c (main):
+	Set the locale modifiers
+
 2002-05-27  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/focus.c (restore_focus_after_unmap):
